# labfabex_texture_gazebo

./: CMakeLists.txt  README.md  package.xml
lauch/: labfabex.launch
models/labfabex/: model.config  model.sdf
models/labfabex/materials/scripts/: lab_texture.material
models/labfabex/meshes/: labfabex_walls.dae
models/labfabex_ground/: model.config  model.sdf
models/labfabex_ground/materials/scripts/: map.material
models/leadwell/: leadwell.sdf  model.config
models/leadwell/meshes/: centromecan.dae
models/motoman/: model.config  motoman.sdf
models/motoman/meshes/: motoman.dae
models/muebles/: model.config  muebles.sdf
models/muebles/meshes/: mesacircular.dae  mesacuadrada.dae  mesatriangular.dae  silla.dae  sillaa.dae  sillaaa.dae
models/scara/: model.config  scara.sdf
models/scara/meshes/: scara.dae
worlds/: labfabex_test.world
