<?xml version="1.0"?>
<package format="2">
  <name>labfabex_texture_gazebo</name>
  <version>0.0.0</version>
  <description>The labfabex_texture_gazebo package</description>

  <maintainer email="juansantacoloma@todo.todo">Juan Santacoloma</maintainer>


  <license>BSD</license>


  <author email="jssantacolomab@unal.edu.co">Juan Santacoloma</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path ="${prefix}/models"/>
    <gazebo_ros gazebo_media_path ="${prefix}/worlds"/>
  </export>
</package>
